Changed dashboard view to main to

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # vendor/
 .vscode/
 # app/config/config.php
-composer.lock
-.vagrant/
-runway
+# composer.lock
+# .vagrant/
+# runway
 public/assets/img/*
 !public/assets/img/christmas
 !public/assets/img/gifts
